Pod-administrateur/administrateur-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-administrateur
  namespace: administrateur
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pod-administrateur
  template:
    metadata:
      labels:
        app: pod-administrateur
    spec:
      containers:
        - name: administrateur-db-container
          image: postgres:15
          imagePullPolicy: Always
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 5436
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: administrateur-storage

        - name: administrateur-api-container
          image: goodfoodadministrateur
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3004
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "1024Mi" 

      volumes:
        - name: administrateur-storage
          persistentVolumeClaim:
            claimName: administrateur-pvc
