Pod-administrateur/administrateur-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: administrateur-ingress
  namespace: administrateur
spec:
  entryPoints:
    - web
  routes:
    # Route pour l'API (/administrateur/api/...)
    - match: PathPrefix(`/administrateur/api`)
      kind: Rule
      priority: 12
      services:
        - name: administrateur-service
          namespace: administrateur
          port: 3004
      middlewares:
        - name: strip-administrateur-api-prefix
          namespace: administrateur
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-administrateur-api-prefix
  namespace: administrateur
spec:
  stripPrefix:
    prefixes:
      - /administrateur/api
